# cit-parser

./: .gitignore  .pre-commit-config.yaml  README.md  commands.py  hello.py  pyproject.toml
src/: __init__.py  invoke.py  postprocess.py  types.py
src/cit_parser/: __init__.py  constants.py  invoke.py  postprocess.py  types.py
src/config/: __init__.py  configuration.py
tests/: test_aggregation.py  test_authorities.py  test_caselaw_cit.py  test_full_text.py  test_stat_cit.py
