[project]
name = "cit-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
    "transformers>=4.45.2",
    "wasabi>=1.1.3",
]

[tool.setuptools]
packages = ["cit_parser"]
package-dir = {"" = "src"}

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.385",
    "ruff>=0.7.0",
]
