[project]
name = "cit-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "spacy>=3.8.2",
    "torch>=2.5.0",
    "transformers>=4.45.2",
    "wasabi>=1.1.3",
]


[tool.setuptools]
packages = ["cit_parser"]
package-dir = {"" = "src"}

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.385",
    "pytest>=8.3.3",
    "ruff>=0.7.0",
    "typer>=0.12.5",
]
